# mangos3

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  config.h.cmake  project_setup.bat  project_setup.sh  project_setup_clang.sh  project_utils_cross-complile.sh
cmake/: .gitignore  FindPCHSupport.cmake  mingw32-i686.cmake  mingw32-x86_64.cmake
contrib/ACE_external/: ace_external_install.sh
contrib/extractor/: .gitignore  System.cpp  dbcfile.cpp  dbcfile.h
contrib/extractor_binary/: ExtractResources.sh  MoveMapGen.sh
contrib/extractor_binary_VC10/: ExtractParams.txt
contrib/git_id/: git_id.cpp
contrib/git_id_R2/: CMakeLists.txt  git_id.cpp
contrib/git_id_R2_SD2/: CMakeLists.txt  git_id.cpp
contrib/mmap/: CMakeLists.txt
contrib/server_scripts/: auto_update.sh  compile_r2.sh  core_parser.sh  opcode_parser.sh  world.sh  world_restart.sh
dep/: CMakeLists.txt
doc/: EventAI.txt  Home.textile  script_commands.txt
lib/: libstorm.so.8.20  libstorm.so.8.20.0
sql/: characters.sql  mangos.sql  mangos_indexes.sql  realmd.sql
sql_mr/: custom_characters_tables.sql  custom_mangos_full_ytdb.sql  custom_mangos_masquerade_begin.sql  custom_mangos_masquerade_end.sql  custom_mangos_tables.sql  custom_rerun_every_mangos_DB_update.sql  mr00000_mangos_characters_calendar.sql  mr00000_worldstate_mangos_change.sql  mr00017_mangos_lightwell.sql  mr00017_mangos_pandora_trader.sql  mr00017_mangos_raise_ally.sql  mr00019_mangos_creature_template.sql  mr00084_mangos_vehicle_scaling.sql  mr00107_mangos_reset_pet_talents.sql  mr00242_mangos_creature_onkill_reputation.sql  mr00299_mangos_mangos_string.sql  mr00760_mangos_pet_spell_auras.sql  mr00992_mangos_creature_template.sql  mr01129_mangos_typos_in_commands.sql  mr01138_mangos_creature_linking.sql  mr01157_mangos_faction_change_reputations.sql  mr01208_mangos_pet_levelstats.sql  mr01485_spell_59390_mangos.sql  mr01515_mangos_the_ring_of_valor.sql  mr01610_mangos_opvp_capture_points.sql  mr01612_mangos_dalaran_arena.sql  mr01615_mangos_language_opvp.sql  mr01640_mangos_name_announce.sql  mr01648_mangos_Strand_of_the_Ancients.sql  mr01678_mangos_custom_areatriggers.sql  mr01688_mangos_vehicle_data.sql  mr01765_realmd_warden_data.sql  mr01792_mangos_spell_linked.sql  mr01793_mangos_string_statemgr.sql  mr01817_mangos_Honorable_Defender.sql  mr01824_mangos_npc_gossip.sql  mr01839_mangos_Isle_of_Conquest.sql  mr01839_mangos_spell_hacks.sql  mr01865_mangos_faction_change_items.sql  mr01866_mangos_faction_change_titles.sql  (+398 more)
src/: CMakeLists.txt
src/game/: AccountMgr.cpp  AccountMgr.h  AchievementMgr.cpp  AchievementMgr.h  AggressorAI.cpp  AntiCheat.cpp  Archaeology.cpp  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundDS.cpp  BattleGroundDS.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundIC.cpp  BattleGroundIC.h  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRB.cpp  BattleGroundRB.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundRV.cpp  BattleGroundRV.h  (+243 more)
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleField/: BattleField.cpp  BattleField.h
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundBG.cpp  BattleGroundBG.h  BattleGroundDS.cpp  BattleGroundDS.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundIC.cpp  BattleGroundIC.h  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRB.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundRV.cpp  BattleGroundRV.h  BattleGroundSA.cpp  BattleGroundSA.h  BattleGroundTP.cpp  BattleGroundTP.h  BattleGroundWS.cpp  BattleGroundWS.h
src/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPGH.cpp  OutdoorPvPGH.h  OutdoorPvPHP.cpp  OutdoorPvPHP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPNA.cpp  OutdoorPvPNA.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h  OutdoorPvPTF.cpp  OutdoorPvPTF.h  OutdoorPvPWG.cpp  OutdoorPvPWG.h  OutdoorPvPZM.cpp  OutdoorPvPZM.h
src/game/WorldPvP/: WorldPvP.cpp  WorldPvP.h  WorldPvPEP.cpp  WorldPvPEP.h  WorldPvPHP.cpp  WorldPvPHP.h  WorldPvPMgr.cpp  WorldPvPMgr.h  WorldPvPNA.cpp  WorldPvPNA.h  WorldPvPSI.cpp  WorldPvPSI.h  WorldPvPTF.cpp  WorldPvPTF.h  WorldPvPWG.cpp  WorldPvPWG.h  WorldPvPZM.cpp  WorldPvPZM.h
src/game/movement/: MoveSpline.cpp  MoveSpline.h  MoveSplineFlag.h  MoveSplineInit.cpp  MoveSplineInit.h  MoveSplineInitArgs.h  packet_builder.cpp  packet_builder.h  spline.h  typedefs.h  util.cpp
src/game/movementGenerators/: ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  FleeingMovementGenerator.cpp  FleeingMovementGenerator.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h
src/game/playerbot/: PlayerbotAI.cpp  PlayerbotDeathKnightAI.cpp  PlayerbotHunterAI.cpp  PlayerbotMageAI.cpp  PlayerbotMgr.cpp  PlayerbotPaladinAI.cpp  PlayerbotPriestAI.cpp  PlayerbotRogueAI.cpp  PlayerbotShamanAI.cpp  PlayerbotWarlockAI.cpp  PlayerbotWarriorAI.cpp
src/game/vmap/: BIH.h  BIHWrap.h  DynamicTree.cpp  DynamicTree.h  GameObjectModel.cpp  GameObjectModel.h  IVMapManager.h  MapTree.cpp  ModelInstance.cpp  ModelInstance.h  RegularGrid.h  TileAssembler.cpp  TileAssembler.h  VMapDefinitions.h  VMapFactory.cpp  VMapManager2.cpp  VMapManager2.h  WorldModel.cpp  WorldModel.h
src/game/warden/: WardenBase.cpp  WardenBase.h  WardenDataStorage.cpp  WardenMac.cpp  WardenWin.cpp
(+156 files in other folders)
